# moving_average

./: .gitignore  Cargo.toml  Makefile  README.md  README.tpl  test_coverage.sh
.github/: FUNDING.yml
.github/workflows/: rust.yml
src/: common.rs  iterator.rs  lib.rs  moving_average.rs  no_sum_moving_average.rs  no_sum_sma.rs  ring_buffer.rs  single_sum_moving_average.rs  single_sum_sma.rs  sma.rs  sum_tree.rs  sum_tree_moving_average.rs  sum_tree_sma.rs
test_coverage/: coverage.json  index.html
test_coverage/html/: coverage.json  index.html
test_coverage/html/src/: common.rs.html  index.html  iterator.rs.html  lib.rs.html  no_sum_sma.rs.html  ring_buffer.rs.html  single_sum_sma.rs.html  sum_tree.rs.html  sum_tree_sma.rs.html
test_coverage/src/: common.rs.html  index.html  lib.rs.html  no_sum_sma.rs.html  ring_buffer.rs.html  single_sum_sma.rs.html  sum_tree.rs.html  sum_tree_sma.rs.html
