[package]
name = "simple_moving_average"
version = "0.1.0"
edition = "2018"
authors = ["Oskar Gustafsson <oskargustafsson88@gmail.com>"]
description = "Library of moving average algorithms"
documentation = "https://docs.rs/simple_moving_average"
repository = "https://github.com/oskargustafsson/moving_average"
readme = "README.md"
categories = ["mathematics", "science", "finance"]
keywords = ["math"]
license = "BSD-3-Clause"

[lib]
name = "simple_moving_average"
path = "src/lib.rs"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
num-traits = "0.2.14"

[dev-dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
nalgebra = "0.29.0"
euclid = "0.22.6"
cgmath = "0.18.0"
rayon = "1.5.1"
