[package]
name = "simple_moving_average"
version = "0.1.2"
edition = "2018"
authors = ["Oskar Gustafsson <oskargustafsson88@gmail.com>"]
description = "Library of simple moving average (SMA) algorithms"
readme = "README.md"
repository = "https://github.com/oskargustafsson/moving_average"
categories = ["mathematics", "science"]
keywords = ["math", "rolling", "moving", "average", "mean"]
license = "MIT"
exclude = [
	"Makefile",
	"README.tpl",
	"rustfmt.toml",
	"/res",
	"/test_coverage",
	"/.github",
	"/.vscode",
]

[lib]
name = "simple_moving_average"
path = "src/lib.rs"

[dependencies]
num-traits = "0.2.14"

[dev-dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
nalgebra = "0.29.0"
euclid = "0.22.6"
cgmath = "0.18.0"
rayon = "1.5.1"
