[package]
name = "simple_moving_average"
version = "1.0.2"
edition = "2018"
authors = ["Oskar Gustafsson <oskargustafsson88@gmail.com>"]
description = "Library of simple moving average (SMA) algorithms"
readme = "README.md"
repository = "https://github.com/oskargustafsson/moving_average"
categories = ["mathematics", "science"]
keywords = ["math", "rolling", "moving", "average", "mean"]
license = "MIT"
exclude = [
	"Makefile",
	"README.tpl",
	"rustfmt.toml",
	"/res",
	"/test_coverage",
	"/.github",
	"/.vscode",
]

[lib]
name = "simple_moving_average"
path = "src/lib.rs"

[dependencies]
num-traits = "0.2.17"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
nalgebra = "0.32.3"
euclid = "0.22.9"
cgmath = "0.18.0"
rayon = "1.8.0"
